# finbr-data-platform

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONSTRAINTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
airflow/: Dockerfile  requirements.txt
airflow/dags/: dbt_transform.py  ingest_cvm_informe_diario.py  ingest_cvm_informe_diario_spark.py
app/api/: Dockerfile  db.py  main.py  requirements.txt  schemas.py  settings.py
app/api/routers/: analytics.py  fundos.py  health.py
app/dashboard/: Dockerfile  requirements.txt  streamlit_app.py
app/dashboard/finbr/: __init__.py  constants.py  formatters.py  queries.py  theme.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: read_raw_parquet.sql
dbt/models/marts/analytics/: _analytics__models.yml  top_fundos_rentabilidade_mes.sql
dbt/models/marts/core/: _core__models.yml  dim_fundo_classe.sql  fct_fundo_rentabilidade_mensal.sql
dbt/models/staging/cvm/: _cvm__sources.yml  _stg_cvm__models.yml  stg_cvm__informe_diario.sql
docs/: architecture.md  data_quality_findings.md  deploy_streamlit_cloud.md
docs/decisions/: 001-why-airflow-standalone.md  002-why-duckdb.md  003-why-dbt-core.md  004-dbt-duckdb-read-parquet.md  005-pandas-vs-pyspark.md
scripts/: backfill_cvm.py  rebuild_warehouse.py
tests/api/: conftest.py  test_analytics.py  test_fundos.py  test_health.py
tests/dags/: test_ingest_cvm_informe_diario.py
tests/data_quality/: conftest.py  test_warehouse_business_rules.py
